# tundri

./: .bumpversion.cfg  .gitignore  CLAUDE.md  GEMMA_RELEASE.md  GITHUB_ACTIONS.md  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: claude-review.yml  claude.yml  manual-release.yml  pr-tests.yml  publish-to-testpypi.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-03-13-output-cleanup.md
docs/superpowers/specs/: 2026-03-13-output-cleanup-design.md
scripts/: bump_version.sh  publish_prod.sh  publish_test.sh
src/permifrost/: __init__.py  entities.py  snowflake_spec_loader.py
src/permifrost/cli/: permissions.py
tests/: conftest.py  test_core.py  test_inspector.py  test_parser.py  test_utils.py
tests/integration_tests/: test_connection.py  test_ddl.py
tundri/: cli.py  constants.py  core.py  inspector.py  objects.py  parser.py  utils.py
