[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "tundri"
version = "1.3.5"
description = "Drop, create and alter Snowflake objects and set permissions with Permifrost"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gemma Analytics", email = "bijan.soltani@gemmaanalytics.com"}
]
keywords = ["snowflake", "permifrost", "database", "ddl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gemma.permifrost",
    "pyyaml",
    "snowflake-connector-python",
    "python-dotenv",
    "rich",
]

[project.scripts]
tundri = "tundri.cli:main"

[project.urls]
Homepage = "https://github.com/Gemma-Analytics/tundri"
Repository = "https://github.com/Gemma-Analytics/tundri"
Issues = "https://github.com/Gemma-Analytics/tundri/issues"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.15.6",
    "twine>=6.1.0",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["tundri"]

[tool.ruff.format]
# defaults match black — no custom settings needed

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
